<resources>
    <string name="app_name">Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet">WALLET</string>
    <string name="sale_points">SALE POINTS</string>
    <string name="top_up">TOP UP</string>
    <string name="manage">MANAGE</string>
    <string name="pay">PAY</string>
    <string name="where_do_i_use">WHERE DO I USE?</string>
    <string name="balance">balance</string>
    <string name="time">%d seconds ago</string>
    <string name="pending_balance">pending balance</string>
</resources>