<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.CardsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/carViewTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:drawablePadding="5dp"
                android:paddingHorizontal="40dp"
                android:text="@string/wallet"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_wallet_24"
                app:drawableTint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:drawablePadding="5dp"
                android:paddingHorizontal="40dp"
                android:text="@string/sale_points"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                app:drawableStartCompat="@drawable/ic_shop_24"
                app:drawableTint="@color/grey" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/grey_default"
        app:strokeWidth="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/where_do_i_use"
            android:textAllCaps="true"
            app:drawableStartCompat="@drawable/ic_map_16"
            app:drawableTint="@color/grey_default" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green_buttons"
        android:text="@string/pay"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutBottomButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:drawablePadding="5dp"
            android:paddingHorizontal="40dp"
            android:text="@string/top_up"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:drawablePadding="5dp"
            android:paddingHorizontal="40dp"
            android:text="@string/manage"
            android:textAlignment="center"
            android:textAllCaps="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>